fix: se añadio los servicios de login & create - ususario seguridad

--- a/API/appsettings.Staging.json
+++ b/API/appsettings.Staging.json
@@ -10,16 +10,22 @@
     "ConnectionString": "",
     "InstrumentationKey": ""
   },
+  //"Authentication": {
+  //  "Authority": "",
+  //  "Audience": "",
+  //  "ClientId": "",
+  //  "Secret": "",
+  //  "ClientScope": ""
+  //},
   "Authentication": {
-    "Authority": "",
-    "Audience": "",
-    "ClientId": "",
-    "Secret": "",
-    "ClientScope": ""
+    "Key": "8bS8Q~XVTSLfZjhyy9cyh~wKImjIWknhC20WMaC_",
+    "Issuer": "http://localhost:60400/",
+    "Audiencee": "http://localhost:60400/",
+    "TokenDuration": 1
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GestionVentas": "Data Source=localhost;Initial Catalog=Ferreteria;User ID=sa;Password=123;MultipleActiveResultSets=True",
+    "GestionVentas": "Data Source=localhost;Initial Catalog=FerreteriaBD;User ID=sa;Password=123;MultipleActiveResultSets=True"
   },
   "service": {
     "urlMasterService": "",
