--- a/Modules/GestionVentas/Domain/Ferreteria.Modules.GestionVentas.Domain.csproj
+++ b/Modules/GestionVentas/Domain/Ferreteria.Modules.GestionVentas.Domain.csproj
@@ -28,7 +28,10 @@
   <ItemGroup>
     <Folder Include="DTO\Tramarsa\" />
     <Folder Include="Enums\" />
-    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
