--- a/API/appsettings.Staging.json
+++ b/API/appsettings.Staging.json
@@ -18,7 +18,7 @@
   //  "ClientScope": ""
   //},
   "Authentication": {
-    "Key": "8bS8Q~XVTSLfZjhyy9cyh~wKImjIWknhC20WMaC_",
+    "Key": "G9d$u4Zk8Xp*3Nmv@f2RqL!yB7eHcV6z",
     "Issuer": "http://localhost:60400/",
     "Audiencee": "http://localhost:60400/",
     "TokenDuration": 1
