fix: cadena de conexion Azure

--- a/API/appsettings.Staging.json
+++ b/API/appsettings.Staging.json
@@ -25,7 +25,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GestionVentas": "Data Source=localhost;Initial Catalog=FerreteriaBD;User ID=sa;Password=123;MultipleActiveResultSets=True"
+    //"GestionVentas": "Data Source=localhost;Initial Catalog=FerreteriaBD;User ID=sa;Password=123;MultipleActiveResultSets=True",
+    //"GestionVentas": "Data Source=tcp:servidor-ferreteria.database.windows.net,1433;Initial Catalog=FerreteriaBD;User ID=adminsql;Password=p@$$W0rD;MultipleActiveResultSets=True",
+    "GestionVentas": "Server=tcp:servidor-ferreteria.database.windows.net,1433;Initial Catalog=FerreteriaBD;Persist Security Info=False;User ID=adminsql;Password=p@$$W0rD;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "service": {
     "urlMasterService": "",
