fix: se añadio APIs para enviar correo de OPT y reestablecer contraseña

--- a/API/appsettings.Staging.json
+++ b/API/appsettings.Staging.json
@@ -36,7 +36,7 @@
     "urlItinerarioService": "",
     "urlCoreService": "",
     "urlNaveService": "",
-    "urlMailService": "",
+    "urlMailService": "http://genesis.mkg.pe:7007/api/Mail/",
     "azureBlobConnection": ""
   },
   "busConnectionString": {
