--- a/Modules/GestionVentas/Application/Ferreteria.Modules.GestionVentas.Application.csproj
+++ b/Modules/GestionVentas/Application/Ferreteria.Modules.GestionVentas.Application.csproj
@@ -21,4 +21,8 @@
     <!--<ProjectReference Include="..\Domain\Ferreteria.Modules.GestionVentas.Domain.csproj" />-->
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Producto\GetProducto\" />
+  </ItemGroup>
+
 </Project>
